[package]
name = "mb-btc"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
